# broomva.tech

./: .gitbook.yaml  .gitignore  .stylelintrc.json  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  METALAYER.md  PLATFORM.md  README.md  RELEASE.md  SUMMARY.md  fleek.config.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tsconfig.json  turbo.json
.control/audit/: .gitkeep
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml  security.yml  sync-life-docs.yml  validate-release.yml
app/: layout.tsx  page.tsx
app/components/: nav.tsx  particles.tsx
app/contact/: page.tsx
apps/: console
apps/broomva/: .gitignore  .vercelignore  biome.jsonc  evalite.config.ts  middleware.ts  next.config.ts  package.json  playwright.config.ts  proxy.test.ts  proxy.ts  vercel.json
apps/broomva/app/: error.tsx  globals.css  layout.tsx  manifest.ts  opengraph-image.tsx
apps/broomva/components/: artifact-panel.tsx  chat-header.tsx  chat-system.tsx  context-sidebar.tsx  context-usage.tsx  device-auth-form.tsx  favicon.tsx  greeting.tsx  image-modal.tsx  login-form.tsx  messages-pane.tsx  model-selector-logo.tsx  model-selector.tsx  multimodal-input.tsx  partial-message-loading.tsx  sheet-editor.tsx  signup-form.tsx  site-header.tsx  source-badge.tsx
apps/broomva/docs/: content-pillars.md
apps/broomva/hooks/: use-context-sidebar.tsx  use-relay-sessions-list.ts  use-stored-utm.ts
apps/broomva/lib/: agent-auth.ts  anonymous-session-server.ts  auth-client.ts  config-schema.ts  date.ts  env-schema.ts  github.ts  railway.ts  redis-health.ts  skills-data.ts  tenant-context.ts
apps/broomva/providers/: audio-playback-provider.tsx  chat-input-provider.tsx  default-model-provider.tsx  tier-user-cap-manager.tsx
apps/broomva/scripts/: check-content.mjs  check-env.ts  generate-audio-gemini.py  generate-audio.ts  generate-lifegw-tier1-jwk.mjs  seed-prompts.ts  sync-bookkeeping-snapshot.ts  verify-public-asset-routes.mjs  worktree-setup.sh
apps/broomva/tests/: anima-usdc.spec.ts  auth.setup.ts  relay-auth.test.ts  tier-routing.test.ts
apps/broomva/trpc/: init.ts
apps/chat/: .env.example  .gitignore  biome.jsonc  chat.config.ts  drizzle.config.ts  instrumentation.ts  next.config.ts  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/chat/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  robots.ts  sitemap.ts
apps/chat/components/: app-sidebar.tsx  artifact-actions.tsx  assistant-message.tsx  chart-area-interactive.tsx  chat-system.tsx  console-sidebar.tsx  console.tsx  data-table.tsx  device-auth-form.tsx  github-link.tsx  image-modal.tsx  login-form.tsx  model-selector.tsx  multimodal-input.tsx  nav-documents.tsx  nav-main.tsx  nav-projects.tsx  nav-secondary.tsx  nav-user.tsx  onboarding-form.tsx  section-cards.tsx  sheet-editor.tsx  sidebar-chats-list.tsx  sidebar-user-nav.tsx  signup-form.tsx  site-header.tsx  social-auth-providers.tsx  team-switcher.tsx
apps/chat/docs/: brand.md  telemetry.md
apps/chat/evals/: connectivity.eval.ts  identity.eval.ts  kg-retrieval.eval.ts
apps/chat/hooks/: use-feature-flag.ts  use-search-index.ts
apps/chat/lib/: agent-auth-client.ts  agent-auth.ts  anonymous-session-client.ts  auth.ts  config-schema.ts  content.ts  discovery.ts  env-schema.ts  feature-flags-shared.ts  feature-flags.ts  github.ts  graph.ts  lago-assets.ts  (+7 more)
apps/docs/: .gitignore  introduction.mdx  mint.json  next.config.ts  package.json  quickstart.mdx  source.config.ts  tsconfig.json  vercel.json
apps/landing/: README.md  global.css  package-lock.json  package.json  rome.json
book/: README.md  SUMMARY.md  clean_notion_export.py  gitbook_formatting.py
book/.obsidian/: graph.json  workspace.json
book/blog/: Self Engineering Wiki .md  Self Engineering Wiki 144621d3a42e4d13bbaf41864a58d26e.md  Self Engineering Wiki.md  solution_architect_questions.md
book/online_courses_notes/: Azure Data Scientist Associate.md  Data Engineer.md  How to Win a Data Science Competition Learn from T.md  Machine Learning with Big Data.md  Solution Architect Questions.md  azure_data_scientist_associate.md  big_data_adquisición_y_almacenamiento_de_datos.md
book/tech_scribbles/: data_monetization.md
crates/broomva-cli/: Cargo.toml  Cross.toml  Makefile  README.md  cliff.toml  install.sh
crates/broomva-cli/.github/workflows/: ci.yml  release.yml
crates/broomva-cli/schemas/: agent-task.v1.json
crates/broomva-cli/src/: error.rs  frontmatter.rs  lib.rs  main.rs
crates/broomva-cli/src/api/: agent_stream.rs  auth.rs  lifed.rs  lifegw_refresh.rs  mod.rs  output_validator.rs  tls.rs  types.rs
crates/broomva-cli/src/cli/: agent.rs  auth.rs  chat.rs  config_cmd.rs  console.rs  context.rs  daemon_cmd.rs  docs.rs  handoff.rs  handoff_frontmatter.rs  mod.rs  output.rs  prompts.rs  relay.rs  setup.rs  skills.rs
crates/broomva-cli/src/config/: constants.rs  mod.rs  types.rs
crates/broomva-cli/src/daemon/: dashboard.rs  heartbeat.rs  logger.rs  mod.rs  process.rs  symphony_client.rs
crates/broomva-cli/src/daemon/sensors/: api_health.rs  mod.rs  railway_health.rs  site_health.rs
crates/broomva-cli/src/telemetry/: beacon.rs  mod.rs  session.rs  source.rs
crates/broomva-cli/src/tui/: mod.rs  slash.rs
crates/broomva-cli/templates/: daily-briefing.task.yaml  hello.task.yaml  summarize-pr.task.yaml  update-linear.task.yaml
crates/broomva-cli/tests/: agent_task_validation.rs  chat_smoke.rs
docs/pr-explainers/: PR-213.html
docs/showcase/: seed_hawthorne_dogfood.py
docs/specs/: 2026-05-18-broomva-cli-agent-chat-pipeline.md  2026-06-05-maestro-relay-dispatch-phase-1b.html
gitbook/.obsidian/: graph.json
scripts/: generate-writing-audio.py  platform-setup.sh  sync-assets-to-lago.ts  sync-cargo-version.sh  sync-life-docs.ts
(+1246 files in other folders)
