[package]
name = "broomva"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/broomva/broomva.tech"
homepage = "https://broomva.tech"
authors = ["Carlos Escobar-Valbuena <carlosbvalbuena@gmail.com>"]
description = "CLI and daemon for broomva.tech — prompts, skills, context, and infrastructure monitoring"
readme = "README.md"
keywords = ["broomva", "cli", "prompts", "skills", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "broomva"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
dotenvy = "0.15"
open = "5"
hostname = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1
