[package]
name = "broomva"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/broomva/broomva.tech"
homepage = "https://broomva.tech"
authors = ["Carlos Escobar-Valbuena <carlosbvalbuena@gmail.com>"]
description = "CLI and daemon for broomva.tech — prompts, skills, context, daemon, and chat REPL"
readme = "README.md"
keywords = ["broomva", "cli", "prompts", "skills", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "broomva"
path = "src/lib.rs"

[[bin]]
name = "broomva"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
dotenvy = "0.15"
open = "5"
hostname = "0.4"
libc = "0.2"
# Chat (Phase A): WebSocket transport, terminal interaction, line editing.
# `tokio-tungstenite` with `rustls-tls-webpki-roots` keeps the existing
# rustls-only TLS posture (no openssl) — required for the linux-arm64
# cross-build that ships under release.yml.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
rustyline = { version = "15", default-features = false, features = ["with-file-history"] }
async-trait = "0.1"
url = "2"
http = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
futures-util = "0.3"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1
