[package]
name = "broomva"
# BRO-1207 (2026-05-20): bumped to 0.9.0 — per-request model selection
# on `broomva chat`. `CreateChatSessionBody` gains an optional `model`
# field that propagates flag → env → config → default through
# `ChatRunOpts::resolve` to the HTTP create_session POST body.
# Stream A (lifegw PR #1406, commit `d3569bbd`, BRO-1206) wired the
# server side end-to-end; this CLI release is the second half. Minor
# bump (not patch) because the `--model` flag now produces an
# observably different runtime outcome (different LLM responds) —
# user-visible behaviour change, additive but worth surfacing in the
# version. Previous: 0.8.1 from BRO-1203 ES256 lifegw JWT.
version = "0.9.1"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/broomva/broomva.tech"
homepage = "https://broomva.tech"
authors = ["Carlos Escobar-Valbuena <carlosbvalbuena@gmail.com>"]
description = "CLI and daemon for broomva.tech — prompts, skills, context, daemon, chat REPL, and typed agent task invocation"
readme = "README.md"
keywords = ["broomva", "cli", "prompts", "skills", "daemon"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "broomva"
path = "src/lib.rs"

[[bin]]
name = "broomva"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
dotenvy = "0.15"
open = "5"
hostname = "0.4"
libc = "0.2"
# Chat (Phase A): WebSocket transport, terminal interaction, line editing.
# `tokio-tungstenite` with `rustls-tls-webpki-roots` keeps the existing
# rustls-only TLS posture (no openssl) — required for the linux-arm64
# cross-build that ships under release.yml.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
# Dev-cert escape hatch (BRO-1186). The tree already pulls these
# transitively via reqwest + tokio-tungstenite — we add direct deps at
# the SAME major-version pins (`rustls 0.23`, `webpki-roots 0.26`,
# `rustls-pemfile 2`) so cargo deduplicates and no new copies enter the
# release binary. `rustls` is feature-pruned to `std + ring + tls12`,
# matching the implicit posture already used by reqwest/tungstenite
# under our rustls-tls posture (no openssl).
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
webpki-roots = "0.26"
rustls-pemfile = "2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
crossterm = { version = "0.28", default-features = false, features = ["events"] }
rustyline = { version = "15", default-features = false, features = ["with-file-history"] }
async-trait = "0.1"
url = "2"
http = "1"
# Agent (Phase B): typed task spec validation, YAML parsing, ULID run IDs.
# `jsonschema 0.40` ships Draft 2020-12 support (used for agent-task.v1.json
# client-side validation). `serde_yaml 0.9` reads task spec files (read-only
# use; if Phase C needs writes we revisit). `ulid 1` for sortable per-run
# IDs (gives us k-sortable filesystem layout under `~/.broomva/runs/`).
jsonschema = { version = "0.40", default-features = false }
serde_yaml = "0.9"
ulid = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
futures-util = "0.3"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1
